--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,9 +1,9 @@
 <html>
-    <head>
-        <title>Hello blog</title>
-    </head>
-    <body>
-        <p>Hi There!</p>
-        <p>It Works</p>
-    </body>
+    {% for post in posts %}
+   <div>
+       <h1><a href="">{{ post.title}}</a></h1>
+        <p>published: {{ post.published_date }}</p>
+       <p>{{ post.text|linebreaksbr }}</p>
+   </div>
+   {% endfor %}
 </html>
