--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,9 +1,15 @@
-<html>
-    {% for post in posts %}
-   <div>
-       <h1><a href="">{{ post.title}}</a></h1>
-        <p>published: {{ post.published_date }}</p>
-       <p>{{ post.text|linebreaksbr }}</p>
-   </div>
-   {% endfor %}
-</html>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+
+{% for post in posts %}
+    <div class="post">
+        <div class="date">
+            {{ post.published_date }}
+        </div>
+        <h1><a href="">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
+
+{% endblock content %}
